- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 3.3.0-rc1
 
- 
        9e501ee8f11486e4686e2a6f38d9993f78989f91
 
Steps to reproduce:
- go to Tools -> Options -> Build & Run -> Kits
 - select a Kit and hit 'Clone'
 - inside the 'Name:' line edit remove the 'Clone of '
	
- no warning appears
 
 - change a letter of re-add the 'Clone of ' by hitting Ctrl+Z
	
- the warning regarding duplicate names appears
 
 
| For Gerrit Dashboard: QTCREATORBUG-13424 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 100693,2 | Kits: Validate current displayname when changing it | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |