Kits: Validate current displayname when changing it

We used to validate the displayname set before the last change,
which is not really useful:-)

Task-number: QTCREATORBUG-13424
Change-Id: Ia71f82d0ab0c8d6392be8dbd8fccad7fb9230b2d
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>