src/plugins/projectexplorer/kitmanagerconfigwidget.h
@@ -109,7 +109,7 @@ private:
     bool m_hasUniqueName;
     QPixmap m_background;
     QList<QAction *> m_actions;
-    QString m_displayName;
+    mutable QString m_cachedDisplayName;
 };
 
 } // namespace Internal
